--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink: blog/:year/:month/:day/:title
 exclude: ["Makefile", "README.md"]
 
 url: "http://nrsalinas.github.io"     # the base hostname & protocol for your site
-baseurl: "/much-worse-jekyll-theme"                   # the subpath of your site, e.g. /blog
+baseurl: "/index"                   # the subpath of your site, e.g. /blog
 
 author:
     name:
