--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: Geeky corner
 description: Much-Worse Jekyll theme for academic page and blog
-sourcecode: "https://github.com/gchauras/much-worse-jekyll-theme"
+# sourcecode: "https://github.com/gchauras/much-worse-jekyll-theme"
 
 permalink: blog/:year/:month/:day/:title
 exclude: ["Makefile", "README.md"]
 
-url: "http://nrsalinas.github.io"     # the base hostname & protocol for your site
-baseurl: "/index"                   # the subpath of your site, e.g. /blog
+# url: "http://nrsalinas.github.io"     # the base hostname & protocol for your site
+# baseurl: "/index"                   # the subpath of your site, e.g. /blog
 
 author:
     name:
