--- a/_config.yml
+++ b/_config.yml
@@ -1,57 +1,10 @@
-title: Geeky corner
-description: Much-Worse Jekyll theme for academic page and blog
-# sourcecode: "https://github.com/gchauras/much-worse-jekyll-theme"
-
-permalink: blog/:year/:month/:day/:title
-exclude: ["Makefile", "README.md"]
-
-# url: "http://nrsalinas.github.io"     # the base hostname & protocol for your site
-# baseurl: "/index"                   # the subpath of your site, e.g. /blog
-
-author:
-    name:
-    facebook:
-    scholar:
+# Site settings
+title: Solo, a Jekyll Theme
+tag_text: Solo
+description: Solo is a Jekyll theme that supports single-page websites only, but supports them well. Yes, it’s responsive.
 
 # Build settings
 markdown: kramdown
-highlighter: rouge
-
-# Settings for analytics helper
-# Set 'provider' to the analytics provider you want to use.
-# Set 'provider' to false to turn analytics off globally.
-#
-analytics:
-    provider:
-    statcounter:
-        sc_project  :
-        sc_security :
-        sc_invisible: 1
-        sc_text     : 2
-    google:
-        tracking_id: ''
-    getclicky:
-      site_id:
-    mixpanel:
-        token: ''
-    piwik:
-        baseURL: '' # Piwik installation address (without protocol)
-        idsite: ''  # the id of the site on Piwik
-
-# Settings for comments helper
-# Set 'provider' to the comment provider you want to use.
-# Set 'provider' to false to turn commenting off globally.
-#
-comments:
-    provider:
-    disqus:
-      short_name:
-    livefyre:
-      site_id:
-    intensedebate:
-      account:
-    facebook:
-      appid:
-      num_posts: 5
-      width: 580
-      colorscheme: light
+exclude: ["README.md"]
+sass:
+  style: compressed
