--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Nelson's website
+title: Nelson Salinas
 tag_text: Nelson R. Salinas
-description: This is my a website.
+description: Nelson Salinas' website.
 
 # Build settings
 markdown: kramdown
